# ads_dsba

./: CMakeLists.txt  README.md  definers .h  main.cpp  main2.c
BSTrees/: exercises.cpp
contests /: task1_A.cpp
contests/contest1/: task1A.cpp  task1B.cpp  task1C.cpp  task1C.py  task1D.py  task1E.cpp  task1F.cpp  task1H.cpp  task1I.cpp  task1K.cpp  task1L.py
contests/contest2/: task1G.cpp  task2A.cpp  task2B.cpp  task2C.cpp  task2D.cpp  task2G.cpp  task2H.cpp
contests/contest3/: task1A.cpp  task3B.cpp  task3C.cpp  task3D.cpp  task3E.cpp  task3G.cpp  task3H.cpp  task3I.cpp  task3J.cpp  task3b.cpp
contests/contest4/: task4A.cpp  task4B.cpp  task4C.cpp  task4D.cpp  task4E.py  task4F.py  task4G.py  task4H.py  task4I.py  task4J.cpp
contests/contest5/: task5A.cpp  task5B.cpp  task5C.cpp  task5D.cpp  task5F.cpp
contests/contest6/: task6A.cpp  task6B.cpp  task6C.cpp  task6D.cpp  task6E.cpp  task6F.cpp  task6G.cpp  task6H.cpp  task6I.cpp
seminar1-06-09-23-mergesort/: merge-sort.cpp
seminar3-4-11-09-23-heapsort/heap-exercise1/: main.cpp
seminar5-18-09-23-chrono-radixsort/: Benchmark-Exercise.xlsx  benchmark.cpp  radixsort-exercise.cpp
seminar6-7-13-10-23-bst/exercise1/: inorderSuccessor.cpp
seminar6-7-13-10-23-bst/exercise2/: validBST.cpp
seminar6-7-13-10-23-bst/homework-solutions/: bstree.h  exercises-solved.cpp
seminars/Module1/BSTrees/: bstree.h
seminars/Module1/seminar02-06-09-23-countsort/: class-notes-countsort-notstable.txt  exercise-countsort.cpp
seminars/Module1/seminar03-04-11-09-23-heapsort/heap-exercise1/: heap.h
seminars/Module1/seminar03-04-11-09-23-heapsort/heap-exercise2/: kLargestElement.cpp
seminars/Module1/seminar03-04-11-09-23-heapsort/heap-exercise3/: kClosestOrigin.cpp
seminars/Module1/seminar05-18-09-23-chrono-radixsort/: Benchmark-Exercise.xlsx
seminars/Module1/seminar06-07-13-10-23-bst/exercise1/: inorderSuccessor.cpp
seminars/Module1/seminar06-07-13-10-23-bst/exercise2/: validBST.cpp
seminars/Module1/seminar08-16-10-23-avl/: avl-exercise.cpp
seminars/Module1/seminar09-16-10-23-tries/: tries.cpp
seminars/Module1/seminars10-11-23-10-23-tree-serialization/: bstree.h  link.txt  main123456.cpp  solution.h
seminars/Module2/seminar01-02-Nov-06-KMP-Z/: exercise2.cpp  kmp.cpp
seminars/Module2/seminar03-04-Nov-11-Ahocorasick/code/: ahocorasick.h  main.cpp  tries.h
seminars/Module2/seminar05-06-Nov-24-BoyerMoore-Exercise/: badchar.cpp
seminars/Module2/seminar07-Nov-27-Test/test/: main.cpp  solution.h
seminars/Module2/seminar09-10-Dec-04-DynProg/: knapsack.cpp  min_coins.cpp
seminars/Module3/greedyalgorithm/: task1.cpp
seminars/Module3/huffman/: huffman.cpp
seminars/quiz/: seminarquiz.cpp
