cmake_minimum_required(VERSION 3.24)
project(algorithmsDSBA_)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithmsDSBA_ main.cpp)
add_executable(seminar1 seminar1-06-09-23-mergesort/merge-sort.cpp)
add_executable(seminar2 seminar2-06-09-23-countsort/exercise-countsort.cpp)
add_executable(seminar3_4_1 seminar3-4-11-09-23-heapsort/heap-exercise1/main.cpp)
add_executable(seminar3_4_2 seminar3-4-11-09-23-heapsort/heap-exercise2/kLargestElement.cpp)
add_executable(seminar3_4_3 seminar3-4-11-09-23-heapsort/heap-exercise3/kClosestOrigin.cpp)
add_executable(seminar5_0 seminar5-18-09-23-chrono-radixsort/benchmark.cpp)
add_executable(seminar5_1 seminar5-18-09-23-chrono-radixsort/radixsort-exercise.cpp)
add_executable(binarytrees BSTrees/exercises.cpp)
add_executable(contest1a contests/contest1/task1A.cpp)
add_executable(contest1b contests/contest1/task1B.cpp)
add_executable(contest1e contests/contest1/task1E.cpp)
add_executable(contest1f contests/contest1/task1F.cpp)
add_executable(contest1h contests/contest1/task1H.cpp)
add_executable(contest1k contests/contest1/task1K.cpp)
add_executable(contest1i contests/contest1/task1I.cpp)
add_executable(contest2a contests/contest2/task1A.cpp)
add_executable(contest2b contests/contest2/task1B.cpp)
add_executable(contest2c contests/contest2/task1C.cpp)
add_executable(contest2d contests/contest2/task1d.cpp)
add_executable(contest2g contests/contest2/task1G.cpp)
add_executable(seminar6_7_0 seminar6-7-13-10-23-bst/exercise1/inorderSuccessor.cpp)
add_executable(seminar6_7_1 seminar6-7-13-10-23-bst/exercise2/validBST.cpp)

