cmake_minimum_required(VERSION 3.24)
project(algorithmsDSBA_)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithmsDSBA_ main.cpp)
# hw
add_executable(contest1a contests/contest1/task1A.cpp)
add_executable(contest1b contests/contest1/task1B.cpp)
add_executable(contest1e contests/contest1/task1E.cpp)
add_executable(contest1f contests/contest1/task1F.cpp)
add_executable(contest1h contests/contest1/task1H.cpp)
add_executable(contest1k contests/contest1/task1K.cpp)
add_executable(contest1i contests/contest1/task1I.cpp)
add_executable(contest2a contests/contest2/task2A.cpp)
add_executable(contest2b contests/contest2/task2B.cpp)
add_executable(contest2c contests/contest2/task2C.cpp)
add_executable(contest2d contests/contest2/task2D.cpp)
add_executable(contest2g contests/contest2/task2G.cpp)
add_executable(contest3a contests/contest3/task3A.cpp)
add_executable(contest3b contests/contest3/task3B.cpp)
add_executable(contest3g contests/contest3/task3G.cpp)
add_executable(contest3j contests/contest3/task3j.cpp)
add_executable(contest3d contests/contest3/task3D.cpp)
add_executable(contest3e contests/contest3/task3E.cpp)
add_executable(contest3c contests/contest3/task3C.cpp)
add_executable(contest3h contests/contest3/task3H.cpp)

# seminars
add_executable(binarytrees seminars/Module1/BSTrees/exercises.cpp)
add_executable(seminar1 seminars/Module1/seminar01-06-09-23-mergesort/merge-sort.cpp)
add_executable(seminar2 seminars/Module1/seminar02-06-09-23-countsort/exercise-countsort.cpp)
add_executable(seminar3_4_1 seminars/Module1/seminar03-04-11-09-23-heapsort/heap-exercise1/main.cpp)
add_executable(seminar3_4_2 seminars/Module1/seminar03-04-11-09-23-heapsort/heap-exercise2/kLargestElement.cpp)
add_executable(seminar3_4_3 seminars/Module1/seminar03-04-11-09-23-heapsort/heap-exercise3/kClosestOrigin.cpp)
add_executable(seminar5_1 seminars/Module1/seminar05-18-09-23-chrono-radixsort/benchmark.cpp)
add_executable(seminar5_2 seminars/Module1/seminar05-18-09-23-chrono-radixsort/radixsort-exercise.cpp)
add_executable(seminar6_7_1 seminars/Module1/seminar06-07-13-10-23-bst/exercise1/inorderSuccessor.cpp)
add_executable(seminar6_7_2 seminars/Module1/seminar06-07-13-10-23-bst/exercise2/validBST.cpp)
add_executable(seminar6_7_3 seminars/Module1/seminar06-07-13-10-23-bst/homework-solutions/exercises-solved.cpp)
add_executable(seminar8 seminars/Module1/seminar08-16-10-23-avl/avl-exercise.cpp)
add_executable(seminar9 seminars/Module1/seminar09-16-10-23-tries/tries.cpp)
add_executable(seminar10 seminars/Module1/seminars10-11-23-10-23-tree-serialization/main123456.cpp)
add_executable(seminar11_1 seminars/Module2/seminar01-02-Nov-06-KMP-Z/exercise2.cpp)
add_executable(seminar11_2 seminars/Module2/seminar01-02-Nov-06-KMP-Z/kmp.cpp)
add_executable(seminar12 seminars/Module2/seminar03-04-Nov-11-Ahocorasick/code/main.cpp)
add_executable(seminar13 seminars/Module2/seminar05-06-Nov-24-BoyerMoore-Exercise/badchar.cpp)
add_executable(seminar14 seminars/Module2/seminar07-Nov-27-Test/test/main.cpp)
add_executable(seminar15_1 seminars/Module2/seminar09-10-Dec-04-DynProg/knapsack.cpp)
add_executable(seminar15_2 seminars/Module2/seminar09-10-Dec-04-DynProg/min_coins.cpp)