cmake_minimum_required(VERSION 3.24)
project(algorithmsDSBA_)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithmsDSBA_ main.cpp
        "definers .h")
# hw
add_executable(contest1a contests/contest1/task1A.cpp)
add_executable(contest1b contests/contest1/task1B.cpp)
add_executable(contest1e contests/contest1/task1E.cpp)
add_executable(contest1f contests/contest1/task1F.cpp)
add_executable(contest1h contests/contest1/task1H.cpp)
add_executable(contest1k contests/contest1/task1K.cpp)
add_executable(contest1i contests/contest1/task1I.cpp)
add_executable(contest2a contests/contest2/task2A.cpp)
add_executable(contest2b contests/contest2/task2B.cpp)
add_executable(contest2c contests/contest2/task2C.cpp)
add_executable(contest2d contests/contest2/task2D.cpp)
add_executable(contest2g contests/contest2/task2G.cpp)
add_executable(contest3a contests/contest3/task3A.cpp)
add_executable(contest3b contests/contest3/task3B.cpp)
add_executable(contest3g contests/contest3/task3G.cpp)
add_executable(contest3j contests/contest3/task3j.cpp)
add_executable(contest3d contests/contest3/task3D.cpp)
add_executable(contest3e contests/contest3/task3E.cpp)
add_executable(contest3c contests/contest3/task3C.cpp)
add_executable(contest3h contests/contest3/task3H.cpp)
add_executable(contest3i contests/contest3/task3I.cpp)
add_executable(contest4a contests/contest4/task4A.cpp)
add_executable(contest4b contests/contest4/task4b.cpp)
add_executable(contest4c contests/contest4/task4c.cpp)
add_executable(contest4d contests/contest4/task4D.cpp)
add_executable(contest4j contests/contest4/task4J.cpp)
add_executable(contest5a contests/contest5/task5A.cpp)
add_executable(contest5b contests/contest5/task5B.cpp)
add_executable(contest5c contests/contest5/task5C.cpp)
add_executable(contest5d contests/contest5/task5D.cpp)
add_executable(contest5e contests/contest5/task5E.cpp)
add_executable(contest5f contests/contest5/task5F.cpp)
add_executable(contest6a contests/contest6/task6A.cpp)
add_executable(contest6c contests/contest6/task6C.cpp)
add_executable(contest6E contests/contest6/task6E.cpp)
add_executable(contest6g contests/contest6/task6G.cpp)
add_executable(contest6f contests/contest6/task6F.cpp)
add_executable(contest6i  contests/contest6/task6I.cpp)
add_executable(contest6h  contests/contest6/task6H.cpp)
add_executable(contest6d  contests/contest6/task6D.cpp)
add_executable(contest6b contests/contest6/task6B.cpp)


# seminars
add_executable(binarytrees seminars/Module1/BSTrees/exercises.cpp)
add_executable(seminar1 seminars/Module1/seminar01-06-09-23-mergesort/merge-sort.cpp)
add_executable(seminar2 seminars/Module1/seminar02-06-09-23-countsort/exercise-countsort.cpp)
add_executable(seminar3_4_1 seminars/Module1/seminar03-04-11-09-23-heapsort/heap-exercise1/main.cpp)
add_executable(seminar3_4_2 seminars/Module1/seminar03-04-11-09-23-heapsort/heap-exercise2/kLargestElement.cpp)
add_executable(seminar3_4_3 seminars/Module1/seminar03-04-11-09-23-heapsort/heap-exercise3/kClosestOrigin.cpp)
add_executable(seminar5_1 seminars/Module1/seminar05-18-09-23-chrono-radixsort/benchmark.cpp)
add_executable(seminar5_2 seminars/Module1/seminar05-18-09-23-chrono-radixsort/radixsort-exercise.cpp)
add_executable(seminar6_7_1 seminars/Module1/seminar06-07-13-10-23-bst/exercise1/inorderSuccessor.cpp)
add_executable(seminar6_7_2 seminars/Module1/seminar06-07-13-10-23-bst/exercise2/validBST.cpp)
add_executable(seminar6_7_3 seminars/Module1/seminar06-07-13-10-23-bst/homework-solutions/exercises-solved.cpp)
add_executable(seminar8 seminars/Module1/seminar08-16-10-23-avl/avl-exercise.cpp)
add_executable(seminar9 seminars/Module1/seminar09-16-10-23-tries/tries.cpp)
add_executable(seminar10 seminars/Module1/seminars10-11-23-10-23-tree-serialization/main123456.cpp)
add_executable(seminar11_1 seminars/Module2/seminar01-02-Nov-06-KMP-Z/exercise2.cpp)
add_executable(seminar11_2 seminars/Module2/seminar01-02-Nov-06-KMP-Z/kmp.cpp)
add_executable(seminar12 seminars/Module2/seminar03-04-Nov-11-Ahocorasick/code/main.cpp)
add_executable(seminar13 seminars/Module2/seminar05-06-Nov-24-BoyerMoore-Exercise/badchar.cpp)
add_executable(seminar14 seminars/Module2/seminar07-Nov-27-Test/test/main.cpp)
add_executable(seminar15_1 seminars/Module2/seminar09-10-Dec-04-DynProg/knapsack.cpp)
add_executable(seminar15_2 seminars/Module2/seminar09-10-Dec-04-DynProg/min_coins.cpp)
add_executable(seminar16_1 seminars/Module3/huffman/huffman.cpp)
add_executable(seminar16_2 seminars/Module3/greedyalgorithm/task1.cpp)
add_executable(new_target main2.c)
add_executable(new_target2 seminars/quiz/seminarquiz.cpp)
